fix: enhance tooltip functionality with hold timer and visibility state

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -79,15 +79,19 @@ body {
   border-radius: 50%;
   transition: 0.2s;
   font-size: 1.5rem;
+  transition: all 0.2s;
 }
 
 .day:hover:not(.empty) {
   background-color: var(--accent-color);
   color: var(--primary-color);
+  font-size: 1.7rem;
 }
 
 .today {
   background-color: var(--primary-color) !important;
+  border: 5px solid var(--text-color);
+  box-shadow: 4px 4px 0px 0px var(--text-color);
   font-weight: bold;
 }
 
@@ -140,6 +144,7 @@ body {
 .holiday {
   background-color: var(--accent-color);
   border: 2px dashed var(--gray-color);
+  box-shadow: 4px 4px 0px 0px var(--text-color);
 }
 
 .tooltip {
